--- a/Redux/ex01/package.json
+++ b/Redux/ex01/package.json
@@ -18,7 +18,6 @@
     "webpack-dev-server": "^3.1.8"
   },
   "dependencies": {
-    "react": "^16.5.1",
-    "react-dom": "^16.5.1"
+    "redux": "^4.0.0"
   }
 }
