--- a/Redux/ex02/package.json
+++ b/Redux/ex02/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
+    "react-redux": "^5.0.7",
     "redux": "^4.0.0"
   }
 }
