--- a/propTypes/ex01/package.json
+++ b/propTypes/ex01/package.json
@@ -18,6 +18,7 @@
     "webpack-dev-server": "^3.1.8"
   },
   "dependencies": {
+    "prop-types": "^15.6.2",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-redux": "^5.0.7",
